Trying to make game over buttons fix inside chocolate bar on mobile 7

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,7 +206,7 @@ button {
 	height: calc(min(80px, 15vmin) - 11px);
 	/* margin-top: 10px;
 	margin-right: 20px; */
-	font-size: 1.25rem;
+	font-size: 1.2rem;
 	background-color: hsl(10, 59%, 31%);
 	border: 4px solid;
 	border-left-color: hsl(10, 59%, 44%);
